fix(P0): reservation counter drifted upward and created phantom stock
Root cause: the reserved quantity per product had two representations that
were kept in sync by hand. The authoritative one was the set of live
reservation keys; alongside it sat a denormalized reserved_count:{productId}
counter, incremented on reserve and decremented only on an explicit consume
or release.

A reservation that simply lapsed through its Redis TTL decremented nothing.
The reconciliation step only corrected the counter when it was below the
live total:

    if (counter < liveTotal) { ...; return liveTotal; }
    return counter;                 // stale inflated value returned as-is

so the case that actually occurred, counter above liveTotal, was never
corrected. The reserved amount was therefore monotonically increasing.

Impact: every abandoned cart permanently consumed stock. On a popular
product reserved eventually reached quantity and the product became
unbuyable while physically in stock. No exception, no log, and it only
manifested under real traffic over time.

Verified rather than inferred: the pre-fix algorithm was replayed verbatim
against a real Redis in a throwaway test. After the TTL elapsed it still
reported 4 units reserved instead of 0.

Fix: remove the second representation entirely.
- Reservation indexes move from SET to ZSET scored by expiry timestamp.
  Every read prunes by score first, so expiry is self-correcting by
  construction and there is no counter left to drift.
- The quantity is encoded into the product member as "<id>:<qty>", so the
  reserved total is summed in two round trips regardless of how many
  reservations exist. The old code did a hasKey plus an hget per
  reservation, i.e. O(n) round trips on the product page hot path.
- Index keys now carry a TTL. The v1 SET indexes had none and leaked.
- consumeReservationsForCart no longer issues a findById per cart item to
  build an error message it usually discards; the lookup moved onto the
  failure 